--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,7 @@
 {
-  "extends": "steelbrain"
+  "extends": "steelbrain",
+  "rules": {
+    "no-param-reassign": "warn",
+    "import/prefer-default-export": "warn"
+  }
 }
