--- a/package.json
+++ b/package.json
@@ -30,8 +30,7 @@
   },
   "dependencies": {
     "is-primitive": "^3.0.1",
-    "lodash": "^4",
-    "php-serialize": "^2.0.0"
+    "lodash": "^4"
   },
   "ava": {
     "babel": {
